xs/modules/parsers/parser-hdbdd/src/main/java/com/codbex/kronos/parser/hdbdd/core/CdsParser.java
// Generated from com/codbex/kronos/parser/hdbdd/core/Cds.g4 by ANTLR 4.13.2
package com.codbex.kronos.parser.hdbdd.core;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class CdsParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
    public static final int T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9, T__9 = 10, T__10 = 11,
            T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, T__16 = 17, T__17 = 18, T__18 = 19, T__19 = 20, T__20 = 21,
            T__21 = 22, T__22 = 23, T__23 = 24, NAMESPACE = 25, AS = 26, ON = 27, SELECT = 28, FROM = 29, WHERE = 30, DEFINE = 31,
            UNION = 32, DISTINCT = 33, HANA = 34, JOIN_TYPES = 35, INNER_JOIN = 36, LEFT_JOIN = 37, LEFT_OUTER_JOIN = 38,
            RIGHT_OUTER_JOIN = 39, FULL_OUTER_JOIN = 40, REFERNTIAL_JOIN = 41, TEXT_JOIN = 42, DATETIME_VALUE_FUNCTION = 43, USING = 44,
            NULL = 45, CONCATENATION = 46, NOT_EQUAL_TO = 47, DEFAULT = 48, ASSOCIATION_MIN = 49, BOOLEAN = 50, CONTEXT = 51, ENTITY = 52,
            VIEW = 53, TYPE = 54, ASSOCIATION = 55, TO = 56, ID = 57, SEMICOLUMN = 58, INTEGER = 59, DECIMAL = 60, LOCAL_TIME = 61,
            LOCAL_DATE = 62, UTC_DATE_TIME = 63, UTC_TIMESTAMP = 64, STRING = 65, VARBINARY = 66, TYPE_OF = 67, WS = 68, LINE_COMMENT1 = 69,
            LINE_COMMENT2 = 70, A = 71, B = 72, C = 73, D = 74, E = 75, F = 76, G = 77, H = 78, I = 79, J = 80, K = 81, L = 82, M = 83,
            N = 84, O = 85, P = 86, Q = 87, R = 88, S = 89, T = 90, U = 91, V = 92, W = 93, X = 94, Y = 95, Z = 96;
    public static final int RULE_cdsDefinition = 0, RULE_namespaceRule = 1, RULE_usingRule = 2, RULE_topLevelSymbol = 3,
            RULE_dataTypeRule = 4, RULE_contextRule = 5, RULE_structuredTypeRule = 6, RULE_entityRule = 7, RULE_viewRule = 8,
            RULE_fieldDeclRule = 9, RULE_typeAssignRule = 10, RULE_elementDeclRule = 11, RULE_elementDetails = 12,
            RULE_elementConstraints = 13, RULE_associationConstraints = 14, RULE_constraints = 15, RULE_association = 16,
            RULE_calculatedAssociation = 17, RULE_statement = 18, RULE_associationTarget = 19, RULE_unmanagedForeignKey = 20,
            RULE_managedForeignKeys = 21, RULE_foreignKey = 22, RULE_cardinality = 23, RULE_defaultValue = 24, RULE_annotationRule = 25,
            RULE_annValue = 26, RULE_enumRule = 27, RULE_arrRule = 28, RULE_obj = 29, RULE_keyValue = 30, RULE_selectRule = 31,
            RULE_joinRule = 32, RULE_joinFields = 33, RULE_selectedColumnsRule = 34, RULE_whereRule = 35, RULE_characters = 36,
            RULE_identifier = 37;

    private static String[] makeRuleNames() {
        return new String[] {"cdsDefinition", "namespaceRule", "usingRule", "topLevelSymbol", "dataTypeRule", "contextRule",
                "structuredTypeRule", "entityRule", "viewRule", "fieldDeclRule", "typeAssignRule", "elementDeclRule", "elementDetails",
                "elementConstraints", "associationConstraints", "constraints", "association", "calculatedAssociation", "statement",
                "associationTarget", "unmanagedForeignKey", "managedForeignKeys", "foreignKey", "cardinality", "defaultValue",
                "annotationRule", "annValue", "enumRule", "arrRule", "obj", "keyValue", "selectRule", "joinRule", "joinFields",
                "selectedColumnsRule", "whereRule", "characters", "identifier"};
    }

    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[] {null, "'.'", "'::'", "':'", "'{'", "'}'", "'\"'", "'('", "','", "')'", "'not null'", "'NULL'", "'NOT NULL'",
                "'='", "'['", "'*'", "']'", "'@'", "'#'", "'<'", "'>'", "'/'", "'%'", "'^'", "'+'", null, null, null, null, null, null,
                null, null, null, "'hana'", null, null, null, null, null, null, null, null, null, null, "'null'", "'||'", "'<>'", null,
                null, null, null, null, null, null, null, null, null, "';'"};
    }

    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[] {null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, "NAMESPACE", "AS", "ON", "SELECT", "FROM", "WHERE", "DEFINE", "UNION", "DISTINCT",
                "HANA", "JOIN_TYPES", "INNER_JOIN", "LEFT_JOIN", "LEFT_OUTER_JOIN", "RIGHT_OUTER_JOIN", "FULL_OUTER_JOIN",
                "REFERNTIAL_JOIN", "TEXT_JOIN", "DATETIME_VALUE_FUNCTION", "USING", "NULL", "CONCATENATION", "NOT_EQUAL_TO", "DEFAULT",
                "ASSOCIATION_MIN", "BOOLEAN", "CONTEXT", "ENTITY", "VIEW", "TYPE", "ASSOCIATION", "TO", "ID", "SEMICOLUMN", "INTEGER",
                "DECIMAL", "LOCAL_TIME", "LOCAL_DATE", "UTC_DATE_TIME", "UTC_TIMESTAMP", "STRING", "VARBINARY", "TYPE_OF", "WS",
                "LINE_COMMENT1", "LINE_COMMENT2", "A", "B", "C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M", "N", "O", "P", "Q", "R",
                "S", "T", "U", "V", "W", "X", "Y", "Z"};
    }

    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "Cds.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public CdsParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    @SuppressWarnings("CheckReturnValue")
    public static class CdsDefinitionContext extends ParserRuleContext {
        public NamespaceRuleContext namespaceRule() {
            return getRuleContext(NamespaceRuleContext.class, 0);
        }

        public TopLevelSymbolContext topLevelSymbol() {
            return getRuleContext(TopLevelSymbolContext.class, 0);
        }

        public List<UsingRuleContext> usingRule() {
            return getRuleContexts(UsingRuleContext.class);
        }

        public UsingRuleContext usingRule(int i) {
            return getRuleContext(UsingRuleContext.class, i);
        }

        public CdsDefinitionContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_cdsDefinition;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof CdsListener)
                ((CdsListener) listener).enterCdsDefinition(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof CdsListener)
                ((CdsListener) listener).exitCdsDefinition(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CdsVisitor)
                return ((CdsVisitor<? extends T>) visitor).visitCdsDefinition(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final CdsDefinitionContext cdsDefinition() throws RecognitionException {
        CdsDefinitionContext _localctx = new CdsDefinitionContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_cdsDefinition);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(76);
                namespaceRule();
                setState(80);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == USING) {
                    {
                        {
                            setState(77);
                            usingRule();
                        }
                    }
                    setState(82);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(83);
                topLevelSymbol();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class NamespaceRuleContext extends ParserRuleContext {
        public IdentifierContext identifier;
        public List<IdentifierContext> members = new ArrayList<IdentifierContext>();

        public TerminalNode NAMESPACE() {
            return getToken(CdsParser.NAMESPACE, 0);
        }

        public TerminalNode SEMICOLUMN() {
            return getToken(CdsParser.SEMICOLUMN, 0);
        }

        public List<IdentifierContext> identifier() {
            return getRuleContexts(IdentifierContext.class);
        }

        public IdentifierContext identifier(int i) {
            return getRuleContext(IdentifierContext.class, i);
        }

        public NamespaceRuleContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_namespaceRule;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof CdsListener)
                ((CdsListener) listener).enterNamespaceRule(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof CdsListener)
                ((CdsListener) listener).exitNamespaceRule(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CdsVisitor)
                return ((CdsVisitor<? extends T>) visitor).visitNamespaceRule(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final NamespaceRuleContext namespaceRule() throws RecognitionException {
        NamespaceRuleContext _localctx = new NamespaceRuleContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_namespaceRule);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(85);
                match(NAMESPACE);
                setState(86);
                ((NamespaceRuleContext) _localctx).identifier = identifier();
                ((NamespaceRuleContext) _localctx).members.add(((NamespaceRuleContext) _localctx).identifier);
                setState(91);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__0) {
                    {
                        {
                            setState(87);
                            match(T__0);
                            setState(88);
                            ((NamespaceRuleContext) _localctx).identifier = identifier();
                            ((NamespaceRuleContext) _localctx).members.add(((NamespaceRuleContext) _localctx).identifier);
                        }
                    }
                    setState(93);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(94);
                match(SEMICOLUMN);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class UsingRuleContext extends ParserRuleContext {
        public IdentifierContext identifier;
        public List<IdentifierContext> pack = new ArrayList<IdentifierContext>();
        public List<IdentifierContext> members = new ArrayList<IdentifierContext>();
        public IdentifierContext alias;

        public TerminalNode USING() {
            return getToken(CdsParser.USING, 0);
        }

        public TerminalNode SEMICOLUMN() {
            return getToken(CdsParser.SEMICOLUMN, 0);
        }

        public List<IdentifierContext> identifier() {
            return getRuleContexts(IdentifierContext.class);
        }

        public IdentifierContext identifier(int i) {
            return getRuleContext(IdentifierContext.class, i);
        }

        public TerminalNode AS() {
            return getToken(CdsParser.AS, 0);
        }

        public UsingRuleContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_usingRule;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof CdsListener)
                ((CdsListener) listener).enterUsingRule(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof CdsListener)
                ((CdsListener) listener).exitUsingRule(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CdsVisitor)
                return ((CdsVisitor<? extends T>) visitor).visitUsingRule(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final UsingRuleContext usingRule() throws RecognitionException {
        UsingRuleContext _localctx = new UsingRuleContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_usingRule);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(96);
                match(USING);
                setState(97);
                ((UsingRuleContext) _localctx).identifier = identifier();
                ((UsingRuleContext) _localctx).pack.add(((UsingRuleContext) _localctx).identifier);
                setState(102);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__0) {
                    {
                        {
                            setState(98);
                            match(T__0);
                            setState(99);
                            ((UsingRuleContext) _localctx).identifier = identifier();
                            ((UsingRuleContext) _localctx).pack.add(((UsingRuleContext) _localctx).identifier);
                        }
                    }
                    setState(104);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(105);
                match(T__1);
                setState(106);
                ((UsingRuleContext) _localctx).identifier = identifier();
                ((UsingRuleContext) _localctx).members.add(((UsingRuleContext) _localctx).identifier);
                setState(111);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__0) {
                    {
                        {
                            setState(107);
                            match(T__0);
                            setState(108);
                            ((UsingRuleContext) _localctx).identifier = identifier();
                            ((UsingRuleContext) _localctx).members.add(((UsingRuleContext) _localctx).identifier);
                        }
                    }
                    setState(113);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(116);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == AS) {
                    {
                        setState(114);
                        match(AS);
                        setState(115);
                        ((UsingRuleContext) _localctx).alias = identifier();
                    }
                }

                setState(118);
                match(SEMICOLUMN);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class TopLevelSymbolContext extends ParserRuleContext {
        public List<DataTypeRuleContext> dataTypeRule() {
            return getRuleContexts(DataTypeRuleContext.class);
        }

        public DataTypeRuleContext dataTypeRule(int i) {
            return getRuleContext(DataTypeRuleContext.class, i);
        }

        public ContextRuleContext contextRule() {
            return getRuleContext(ContextRuleContext.class, 0);
        }

        public StructuredTypeRuleContext structuredTypeRule() {
            return getRuleContext(StructuredTypeRuleContext.class, 0);
        }

        public EntityRuleContext entityRule() {
            return getRuleContext(EntityRuleContext.class, 0);
        }

        public ViewRuleContext viewRule() {
            return getRuleContext(ViewRuleContext.class, 0);
        }

        public TopLevelSymbolContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_topLevelSymbol;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof CdsListener)
                ((CdsListener) listener).enterTopLevelSymbol(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof CdsListener)
                ((CdsListener) listener).exitTopLevelSymbol(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CdsVisitor)
                return ((CdsVisitor<? extends T>) visitor).visitTopLevelSymbol(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final TopLevelSymbolContext topLevelSymbol() throws RecognitionException {
        TopLevelSymbolContext _localctx = new TopLevelSymbolContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_topLevelSymbol);
        int _la;
        try {
            setState(138);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 10, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1); {
                    setState(123);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while (_la == T__16 || _la == TYPE) {
                        {
                            {
                                setState(120);
                                dataTypeRule();
                            }
                        }
                        setState(125);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                }
                    break;
                case 2:
                    enterOuterAlt(_localctx, 2); {
                    setState(127);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if (_la == T__16 || _la == CONTEXT) {
                        {
                            setState(126);
                            contextRule();
                        }
                    }

                }
                    break;
                case 3:
                    enterOuterAlt(_localctx, 3); {
                    setState(130);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if (_la == T__16 || _la == TYPE) {
                        {
                            setState(129);
                            structuredTypeRule();
                        }
                    }

                }
                    break;
                case 4:
                    enterOuterAlt(_localctx, 4); {
                    setState(133);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if (_la == T__16 || _la == ENTITY) {
                        {
                            setState(132);
                            entityRule();
                        }
                    }

                }
                    break;
                case 5:
                    enterOuterAlt(_localctx, 5); {
                    setState(136);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 9007201402355712L) != 0)) {
                        {
                            setState(135);
                            viewRule();
                        }
                    }

                }
                    break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class DataTypeRuleContext extends ParserRuleContext {
        public Token artifactType;
        public IdentifierContext artifactName;

        public TypeAssignRuleContext typeAssignRule() {
            return getRuleContext(TypeAssignRuleContext.class, 0);
        }

        public TerminalNode SEMICOLUMN() {
            return getToken(CdsParser.SEMICOLUMN, 0);
        }

        public TerminalNode TYPE() {
            return getToken(CdsParser.TYPE, 0);
        }

        public IdentifierContext identifier() {
            return getRuleContext(IdentifierContext.class, 0);
        }

        public List<AnnotationRuleContext> annotationRule() {
            return getRuleContexts(AnnotationRuleContext.class);
        }

        public AnnotationRuleContext annotationRule(int i) {
            return getRuleContext(AnnotationRuleContext.class, i);
        }

        public DataTypeRuleContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_dataTypeRule;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof CdsListener)
                ((CdsListener) listener).enterDataTypeRule(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof CdsListener)
                ((CdsListener) listener).exitDataTypeRule(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CdsVisitor)
                return ((CdsVisitor<? extends T>) visitor).visitDataTypeRule(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final DataTypeRuleContext dataTypeRule() throws RecognitionException {
        DataTypeRuleContext _localctx = new DataTypeRuleContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_dataTypeRule);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(143);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__16) {
                    {
                        {
                            setState(140);
                            annotationRule();
                        }
                    }
                    setState(145);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(146);
                ((DataTypeRuleContext) _localctx).artifactType = match(TYPE);
                setState(147);
                ((DataTypeRuleContext) _localctx).artifactName = identifier();
                setState(148);
                match(T__2);
                setState(149);
                typeAssignRule();
                setState(150);
                match(SEMICOLUMN);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class ContextRuleContext extends ParserRuleContext {
        public Token artifactType;
        public IdentifierContext artifactName;

        public TerminalNode CONTEXT() {
            return getToken(CdsParser.CONTEXT, 0);
        }

        public IdentifierContext identifier() {
            return getRuleContext(IdentifierContext.class, 0);
        }

        public List<AnnotationRuleContext> annotationRule() {
            return getRuleContexts(AnnotationRuleContext.class);
        }

        public AnnotationRuleContext annotationRule(int i) {
            return getRuleContext(AnnotationRuleContext.class, i);
        }

        public List<ContextRuleContext> contextRule() {
            return getRuleContexts(ContextRuleContext.class);
        }

        public ContextRuleContext contextRule(int i) {
            return getRuleContext(ContextRuleContext.class, i);
        }

        public List<DataTypeRuleContext> dataTypeRule() {
            return getRuleContexts(DataTypeRuleContext.class);
        }

        public DataTypeRuleContext dataTypeRule(int i) {
            return getRuleContext(DataTypeRuleContext.class, i);
        }

        public List<StructuredTypeRuleContext> structuredTypeRule() {
            return getRuleContexts(StructuredTypeRuleContext.class);
        }

        public StructuredTypeRuleContext structuredTypeRule(int i) {
            return getRuleContext(StructuredTypeRuleContext.class, i);
        }

        public List<EntityRuleContext> entityRule() {
            return getRuleContexts(EntityRuleContext.class);
        }

        public EntityRuleContext entityRule(int i) {
            return getRuleContext(EntityRuleContext.class, i);
        }

        public List<ViewRuleContext> viewRule() {
            return getRuleContexts(ViewRuleContext.class);
        }

        public ViewRuleContext viewRule(int i) {
            return getRuleContext(ViewRuleContext.class, i);
        }

        public TerminalNode SEMICOLUMN() {
            return getToken(CdsParser.SEMICOLUMN, 0);
        }

        public ContextRuleContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_contextRule;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof CdsListener)
                ((CdsListener) listener).enterContextRule(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof CdsListener)
                ((CdsListener) listener).exitContextRule(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CdsVisitor)
                return ((CdsVisitor<? extends T>) visitor).visitContextRule(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final ContextRuleContext contextRule() throws RecognitionException {
        ContextRuleContext _localctx = new ContextRuleContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_contextRule);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(155);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__16) {
                    {
                        {
                            setState(152);
                            annotationRule();
                        }
                    }
                    setState(157);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(158);
                ((ContextRuleContext) _localctx).artifactType = match(CONTEXT);
                setState(159);
                ((ContextRuleContext) _localctx).artifactName = identifier();
                setState(160);
                match(T__3);
                setState(168);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 33776999352893440L) != 0)) {
                    {
                        setState(166);
                        _errHandler.sync(this);
                        switch (getInterpreter().adaptivePredict(_input, 13, _ctx)) {
                            case 1: {
                                setState(161);
                                contextRule();
                            }
                                break;
                            case 2: {
                                setState(162);
                                dataTypeRule();
                            }
                                break;
                            case 3: {
                                setState(163);
                                structuredTypeRule();
                            }
                                break;
                            case 4: {
                                setState(164);
                                entityRule();
                            }
                                break;
                            case 5: {
                                setState(165);
                                viewRule();
                            }
                                break;
                        }
                    }
                    setState(170);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(171);
                match(T__4);
                setState(173);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == SEMICOLUMN) {
                    {
                        setState(172);
                        match(SEMICOLUMN);
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class StructuredTypeRuleContext extends ParserRuleContext {
        public Token artifactType;
        public IdentifierContext artifactName;

        public TerminalNode TYPE() {
            return getToken(CdsParser.TYPE, 0);
        }

        public IdentifierContext identifier() {
            return getRuleContext(IdentifierContext.class, 0);
        }

        public List<AnnotationRuleContext> annotationRule() {
            return getRuleContexts(AnnotationRuleContext.class);
        }

        public AnnotationRuleContext annotationRule(int i) {
            return getRuleContext(AnnotationRuleContext.class, i);
        }

        public List<FieldDeclRuleContext> fieldDeclRule() {
            return getRuleContexts(FieldDeclRuleContext.class);
        }

        public FieldDeclRuleContext fieldDeclRule(int i) {
            return getRuleContext(FieldDeclRuleContext.class, i);
        }

        public List<AssociationContext> association() {
            return getRuleContexts(AssociationContext.class);
        }

        public AssociationContext association(int i) {
            return getRuleContext(AssociationContext.class, i);
        }

        public TerminalNode SEMICOLUMN() {
            return getToken(CdsParser.SEMICOLUMN, 0);
        }

        public StructuredTypeRuleContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_structuredTypeRule;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof CdsListener)
                ((CdsListener) listener).enterStructuredTypeRule(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof CdsListener)
                ((CdsListener) listener).exitStructuredTypeRule(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CdsVisitor)
                return ((CdsVisitor<? extends T>) visitor).visitStructuredTypeRule(this);
            else
                return visitor.visitChildren(this);
        }
    }
